--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-$primary-color: #666666;
+@import url("./colors.css");
 
 @font-face {
   font-family: "Rubik";
@@ -31,7 +31,7 @@ body {
   font-size: 16px;
   max-width: 1280px;
   margin: auto;
-  color: $primary-color;
+  color: var(--text-color);
 }
 
 .container {
